--- a/css/countdown.css
+++ b/css/countdown.css
@@ -31,6 +31,27 @@
 		transform: scale(0.4) !important;	
 	}
 }
+@media (max-width: 512px) {
+	#ad {
+		height: 62px;
+		margin-top: 10px;
+	}
+	.countdown_container {
+		transform: scale(0.4) !important;	
+		margin-left: 10%;
+		margin-top: 10px;
+	}
+}
+@media (max-width: 456px) {
+	#ad {
+		margin-top: 20px;
+	}
+	.countdown_container {
+		transform: scale(0.3) !important;	
+		margin-left: 20%;
+		margin-top: 10px;
+	}
+}
 #ad {
 	position: relative;
 	float: right;
