--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -11,7 +11,7 @@
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
     <div class="container" style="padding-right: 0;">
       <a class="nav-brand" href="{{nav[0].path}}" style="width:50%;">
-        <img class="logo" src="/images/layout/Lausanne2020-Emblem.png" style="width: 80%; margin-left: 10%;" />
+        <img class="logo" src="/images/layout/Lausanne2020-Emblem.png" />
       </a>
       
       <script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" ></script>
