--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -57,8 +57,8 @@
 	width: 80%; 
 	margin-left: 10%;
 	@media (max-width: 512px) {
-		width: 90%;
-		margin-left: 5px;
+		width: 90% !important;
+		margin-left: 5% !important;
     	}
 }
 
