--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -190,7 +190,9 @@
         margin: 30px 0 0 200px;
         width:150px;
     }
-    
+    .nav-brand {
+    	margin-top: 10px;
+    }
 }
 
 @media only screen 
