--- a/css/countdown.css
+++ b/css/countdown.css
@@ -63,8 +63,8 @@
 	}
 	.countdown_container {
 		transform: scale(0.3) !important;	
-		margin-left: 10%;
-		margin-top: 10px;
+		margin-left: 10% !important;
+		margin-top: 10px !important;
 	}
 	.countdown_container .border {
 		height: 145.2px !important;
