--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -114,7 +114,7 @@
     	float: left;
     }
     .navbar-collapse {
-	margin-left: 0;
+	margin-left: 0 !important;
     }
     .navbar-right {
 	width: 100%;
