--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -59,7 +59,7 @@
 	{% endif %}
 	{% if site.lang == "de" %}
   		<script type="text/javascript">
-          		$('#countdown_container_tag').countdown({'lang': 'fr' });
+          		$('#countdown_container_tag').countdown({'lang': 'de' });
         	</script>
 	{% endif %}
       </div>  
