--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -52,6 +52,11 @@
           		$('#countdown_container_tag').countdown({'lang': 'en' });
         	</script>
 	{% endif %}
+	{% if site.lang == "it" %}
+  		<script type="text/javascript">
+          		$('#countdown_container_tag').countdown({'lang': 'en' });
+        	</script>
+	{% endif %}
 	{% if site.lang == "fr" %}
   		<script type="text/javascript">
           		$('#countdown_container_tag').countdown({'lang': 'fr' });
