--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -19,14 +19,23 @@ html .hero {
     @media (max-width: 1250px) {
         height: 600px;
         margin-top: 50px;
+        .container {
+            padding-top: 180px !important;
+        }
     }
     @media (max-width: 1155px) {
         height: 500px;
         margin-top:100px;
+        .container {
+            padding-top: 110px !important;
+        }
     }
     @media (max-width: 990px) {
         height: 400px;
         margin-top:150px;
+        .container {
+            padding-top: 30px !important;
+        }
     }
     @media (max-width: 830px) {
         height: 400px;
