--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,23 +38,23 @@
         <div class="row">
 
           <div class="col-md-3 col-xs-6">
-            <a href="{% t footer.link.tokyo %}" target="_blank" rel="noopener">
+            <a href="" target="_blank" rel="noopener">
               <img height="80" src="/images/layout/2020_1.png">
             </a>
           </div>
           <div class="col-md-3 col-xs-6">
-            <a href="{% t footer.link.beijing %}" target="_blank" rel="noopener">
+            <a href="" target="_blank" rel="noopener">
               <img height="80" src="/images/layout/Beijing_2022_emblem.jpg">
             </a>
           </div>
 
           <div class="col-md-3 col-xs-6">
-            <a href="{% t footer.link.buenos %}" target="_blank" rel="noopener">
+            <a href="" target="_blank" rel="noopener">
               <img height="80" src="/images/layout/Buenos_Aires_2018_logo.jpg">
             </a>
           </div>
           <div class="col-md-3 col-xs-6">
-            <a href="{% t footer.link.pyeongChang %}" target="_blank" rel="noopener">
+            <a href="" target="_blank" rel="noopener">
               <img height="80" src="/images/layout/2018_2.png">
             </a>
           </div>
