--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -1,14 +1,8 @@
-{% if site.lang == "en" %}
+{% if site.lang == "en-gb" %}
   {% assign nav = site.data.nav-header.en %}
 {% endif %}
-{% if site.lang == "fr" %}
+{% if site.lang == "fr-fr" %}
   {% assign nav = site.data.nav-header.fr %}
-{% endif %}
-{% if site.lang == "de" %}
-  {% assign nav = site.data.nav-header.de %}
-{% endif %}
-{% if site.lang == "it" %}
-  {% assign nav = site.data.nav-header.it %}
 {% endif %}
 
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
