Setup news templates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
         <img src="/images/layout/Lausanne2020-Emblem-white.png" width="307">
       </div>
       <div class="footer_copy col-md-4">
-        site.prismicData.single.base.footer_content.html
+        {{site.prismicData.single.base.fragments.footer_content.html}}
       </div>
       <div class="footer_nav col-md-4">
         <ul class="list-unstyled">
