--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -12,14 +12,14 @@
       </a>
       
       <script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" ></script>
-      <script src="../js/vendors/countdown.js" type="text/javascript" ></script>
+      <script src="/js/vendors/countdown.js" type="text/javascript" ></script>
       <link rel="stylesheet" type="text/css" href="../css/countdown.css">
       <link rel="stylesheet" type="text/css" href="../css/omegact.css">
 
       <div id="ad" style="width:50%">
 	<div id="countdown_container_tag" class="countdown_container">
 	  <div class="logo">
-	    <img src="../omega_countdown/official-timekeeper-omega-fr.jpg">
+	    <img src="/omega_countdown/official-timekeeper-omega-fr.jpg">
 	    <!-- <img class="retina" src="../omega_countdown/official-timekeeper-omega.svg"> -->
 	  </div>
 			
