--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title: 'test'
 ---
 <div class="single-news-content">
 	<header>
@@ -9,28 +8,11 @@ title: 'test'
 	  </div>
 	</header>
 	<div class="container news-content">
-    		{% if site.lang == "fr" %}
-    		<h1>{{page.titre}}</h1>
-		<p class="p_news">{{ page.texteLong | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
-		{% endif %}
-
-		{% if site.lang == "en" %}
-		<h1>{{page.titreEn}}</h1>
-		<p class="p_news">{{ page.texteLongEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
-		{% endif %}
-
-		{% if site.lang == "de" %}
-		<h1>{{page.titreDe}}</h1>
-		<p class="p_news">{{ page.texteLongDe | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
-		{% endif %}
-
-		{% if site.lang == "it" %}
-		<h1>{{page.titreIt}}</h1>
-		<p class="p_news">{{ page.texteLongIt | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
-		{% endif %}
+		<h1>{{page.document.fragments.title.text}}</h1>
+		<p class="p_news">{{ page.document.fragments.body.html | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
     
     <p class="news_date">
-		<time pubdate datetime="{{page.date | date_to_xmlschema}}" title="{{page.date | date_to_xmlschema | date: '%d.%m'}}">{{page.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
+		<time pubdate datetime="{{page.document.fragements.date | date_to_xmlschema}}" title="{{page.document.fragments.publication_date.date | date_to_xmlschema | date: '%d.%m'}}">{{page.document.fragments.publication_date.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
 	</p>
 	</div>
 </div>
