--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -12,6 +12,7 @@
   </script>
   <!-- End Google Analytics -->
 <link rel="stylesheet" href="{{ "/css/style-bottom.css" | prepend: site.baseurl_root }}">
+<link rel="stylesheet" type="text/css" href="{{ "/css/countdown.css" | prepend: site.baseurl_root }}">
 <script src="{{site.url}}/js/vendors/jquery-3.2.0.min.js"></script>
 <script src="{{site.url}}/js/vendors/polyfill/modernizr.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.timeago.min.js"></script>
@@ -21,4 +22,5 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpBk0OIM7nh9iOiqxslyGPBSRp_uVaCmw"></script>
 <script src="{{site.url}}/js/vendors/jquery.visible.min.js"></script>
 <script src="{{site.url}}/js/common.js"></script>
-
+<script src="{{site.url}}/js/vendors/countdown.js" type="text/javascript"></script>
+<script type="text/javascript">$('#countdown_container_tag').countdown({ 'lang': '{{site.langShort}}' });</script>
