--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
       </div>
       <div class="footer_copy col-md-4">
         <p>copyrights © 2017 | Lausanne2020</p>
-        <p>Press contact : <a href="mailto:press@lausanne2020.com?Subject=Press%20contact" >Lise Cordey</a>
+        <p><a href="mailto:press@lausanne2020.com?Subject=Press%20contact" >Press contact</a>
         <p><a href="{% t pages.index.privacy.link %}" target="_blank" rel="noopener noreferrer">{% t pages.index.privacy.text %}</a></p>
         <p>Built with ❤ by <a target="_blank" rel="noopener noreferrer" href="http://blog.comem.ch/2017/05/04/les-jeux-olympiques-du-code/">HEIG-VD</a></p>
       </div>
