Small fixes: liquid warning + js path

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-{% assign nav = site.data.[site.lang].nav.footer %}
+{% assign nav = site.data[site.lang].nav.footer %}
 
 <div class="footer">
   <div class="container">
