--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -1,4 +1,4 @@
-{% assign nav = site.data.[site.lang].nav.header %}
+{% assign nav = site.data[site.lang].nav.header %}
 
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
     <div class="container" style="padding-right: 0;">
