--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -10,12 +10,12 @@
         <div id="countdown_container_tag" class="countdown_container">
           <div class="logo">
             <img src="/assets/omega_countdown/official-timekeeper-omega-fr.jpg">
-            <!-- <img class="retina" src="../assets/omega_countdown/official-timekeeper-omega.svg"> -->
+            <!-- <img class="retina" src="/assets/omega_countdown/official-timekeeper-omega.svg"> -->
           </div>
 			
           <div id="fr" class="countdown">
 
-            <img src="../assets/omega_countdown/line.png">
+            <img src="/assets/omega_countdown/line.png">
             <div class="countdown_numbers">
               <div class="days cd_item"><span class="days_label cd_label"></span><span class="days_remaining cd_remain">00</span></div>
               <div class="hours cd_item"><span class="hours_label cd_label"></span><span class="hours_remaining cd_remain">00</span></div>
