--- a/_layouts/news-archives.html
+++ b/_layouts/news-archives.html
@@ -3,47 +3,44 @@ layout: default
 ---
 {% capture pageyear %}{{ page.year }}{% endcapture %}
 {% capture nowyear %}{{ site.time | date: '%Y' }}{% endcapture %}
+{{nowyear}}
+{{pageyear}}
+<p>page</p>
+{{page.year}}
 <div class="news-page">
   <div class="container">
-    <h1 class="h1_big_news h1_newsletter_cta">{% t pages.news.archive_link %} {{page.year}}</h1>
+    <h1 class="h1_big_news h1_newsletter_cta">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} {{page.year}}</h1>
     <div class="row">
       <div class="news_section">
-      	{% assign newsinverted = site.data.contentful.spaces.news.news | reverse %}
+      	{% assign newsinverted = site.prismicData.collections.news | sort:'fragments.publication_date.date' | reverse  %}
       	{% assign offsetdependonyear = 9 %}
       	{% if pageyear < nowyear %}
       		{% assign offsetdependonyear = 0 %}
       	{% endif %}
-	      {% for new in site.data.contentful.spaces.news.news offset:offsetdependonyear %}
-	      	{% capture newyear %}{{ new.date | date: '%Y' }}{% endcapture %}
+	      {% for news in newsinverted offset:offsetdependonyear  %}
+	      	{% capture newyear %}{{ news.fragments.publication_date.date | date: '%Y' }}{% endcapture %}
 	      	{% if newyear == pageyear %}
-
-					  {% capture dir %}{% unless site.lang == "en" %}{{site.lang}}/{% endunless %}news{% endcapture %} 
-            {% capture link %}{{new.titreEn}}{% endcapture %} 
 	        <div class="come-in-module col-sm-6 col-md-4">
-						<a class="wrap_a" href="/{{ link | datapage_url: dir | split:'.html' | first }}">
-							<div class="new col-md-12">
-								<div class="wrap_media">
-									<img class="grow" src="{{ new.image.url }}?w=400&h=400&q=70">
-								</div>
-								<h1 class="h1_news">
-											{% if site.lang == "fr" %} {{ new.titre }} {% elsif site.lang == "de" %} {{ new.titreDe }} {% elsif site.lang == "it" %} {{ new.titreIT }} {% else %} {{ new.titreEn }} {%
-											endif %}
-									</h1>
-									<p class="p_news">
-											{% if site.lang == "fr" %} {{ new.texte | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} 
-											{% elsif site.lang == "de" %} {{ new.texteDe | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}
-											{% elsif site.lang == "it" %} {{ new.texteIt | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}
-											{% else %} {{ new.texteEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} {% endif %}
-									</p>
-							</div>
-						</a>
-	          <div class="new_meta">
-								<p class="news_date">
-										<time pubdate datetime="{{new.date | date_to_xmlschema}}" title="{{new.date | date_to_xmlschema | date: '%d.%m'}}">{{new.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
-										<a href="/{{ link | datapage_url: dir | split:'.html' | first }}">{% t pages.index.news.plus %}</a>
-								</p>
-						</div>
-					</div>
+           <a class="wrap_a" href="/{{ site.langShort }}/news/{{ news.slug }}">
+              <div class="new col-md-12">
+                  <div class="wrap_media">
+                    <img class="grow" alt="{{ news.fragments.image.alt }}" src="{{ news.fragments.image.url }}" srcset="{{ news.fragments.image.url }} {{ news.fragments.image.width }}w, {{ news.fragments.image.view_mobile_url }} {{ news.fragments.image.view_mobile_width }}w">
+                  </div>
+                  <h1 class="h1_news">
+                      {{ news.fragments.title.text }}
+                  </h1>
+                  <p class="p_news">
+                      {{ news.fragments.lead.text  | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}
+                  </p>
+              </div>
+            </a>
+            <div class="new_meta">
+              <p class="news_date">
+                  <time pubdate datetime="{{news.fragments.publication_date.date | date_to_xmlschema}}" title="{{news.fragments.publication_date.date | date_to_xmlschema | date: '%d.%m'}}">{{news.fragments.publication_date.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
+                  <a href="/{{site.lang}}/news/{{ news.slug }}">{{ site.prismicData.single.page_home.fragments.individual_news_link_to_read_more.text }}</a>
+              </p>
+          	</div>
+	        </div>
 	          {% endif %}
 	      {% endfor %}
 			</div>
