--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -14,7 +14,6 @@
           </div>
 			
           <div id="fr" class="countdown">
-
             <img src="/assets/omega_countdown/line.png">
             <div class="countdown_numbers">
               <div class="days cd_item"><span class="days_label cd_label"></span><span class="days_remaining cd_remain">00</span></div>
@@ -24,32 +23,34 @@
             </div>
             <p></p>
           </div>
+
           <div class="clock">
             <div class="hours cd_item"><span class="clock_hours clock_digit">00</span></div>
             <div class="inter">:</div>
-	    <div class="minutes cd_item"><span class="clock_minutes clock_digit">00</span></div>
-	    <div class="inter">:</div>
-	    <div class="seconds cd_item cd_item_last"><span class="clock_seconds clock_digit">00</span></div>
-	  </div>
-	  <div id="border" class="border"></div>	
+            <div class="minutes cd_item"><span class="clock_minutes clock_digit">00</span></div>
+            <div class="inter">:</div>
+            <div class="seconds cd_item cd_item_last"><span class="clock_seconds clock_digit">00</span></div>
+          </div>
+
+	        <div id="border" class="border"></div>	
         </div>
         <a class="omega_link" target="_blank" href="https://www.omegawatches.com"></a>
       </div>  
       <div class="socials slidedown smartphone col-lg-4 col-md-4">
-	  <div class="links_social">
-	    <a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
-	      <img height="30" src="/images/layout/Instagram-logo.png">
-	    </a>
-	    <a class="socials_links" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
-	      <img height="30" src="/images/layout/facebook-icon.png">
-	    </a>
-	    <a class="socials_links" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-	      <img height="24" src="/images/layout/twitter-icon.svg">
-	    </a>
-	    <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-	      <img height="24" src="/images/layout/YouTube-icon.png">
-	    </a>
-	  </div>    
+        <div class="links_social">
+          <a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+            <img height="30" src="/images/layout/Instagram-logo.png">
+          </a>
+          <a class="socials_links" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+            <img height="30" src="/images/layout/facebook-icon.png">
+          </a>
+          <a class="socials_links" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+            <img height="24" src="/images/layout/twitter-icon.svg">
+          </a>
+          <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+            <img height="24" src="/images/layout/YouTube-icon.png">
+          </a>
+        </div>    
       </div>
       <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
@@ -76,44 +77,28 @@
           <div class="nav navbar-nav navbar-right" style="float: right; margin-right: 0;">
             {% for link in nav %}
 
-              {% capture currentpage %}{{ site.baseurl }}{{ page.url | split:'.html' | first }}{% endcapture %}
-              {% capture folderpath %}{{ link.path }}/{% endcapture %}
-              {% if currentpage == link.path or currentpage == folderpath %}
-                <a class="nav_link w--current" href="{{link.path}}">
+              {% capture current_base_page %}{{ site.baseurl }}{{ page.url | split:'.html' | first }}{% endcapture %}
+              {% capture folder_path %}{{ link.path }}/{% endcapture %}
+
+              {% if current_base_page == link.path or current_base_page == folder_path %}
+                <a class="nav_link w--current" href="{{link.path}}">{{link.title}}</a>
               {% else %}
-                <a class="nav_link" href="{{link.path}}">
+                <a class="nav_link" href="{{link.path}}">{{link.title}}</a>
               {% endif %}
 
-              {{link.title | replace:'2020', '<span class="accent">2020</span>'}}</a>
             {% endfor %}
-              {% capture url_site_en %}{{ site.url }}{{ page.url | split:'.html' | first }}{% endcapture %}
-              {% capture url_site_de %}{{ site.url }}/de{{ page.url | split:'.html' | first }}{% endcapture %}
-              {% capture url_site_fr %}{{ site.url }}/fr{{ page.url | split:'.html' | first }}{% endcapture %}
-              {% capture url_site_it %}{{ site.url }}/it{{ page.url | split:'.html' | first }}{% endcapture %}
 
-              <div class="nav_lang">
-              {% if site.lang == "en" %}
-                <a href="{{ url_site_fr }}" data-language="fr" class="language nav_link">fr</a>
-                <a href="{{ url_site_en }}" data-language="en" class="language nav_link accent">en</a>
-                <a href="{{ url_site_de }}" data-language="de" class="language nav_link">de</a>
-                <a href="{{ url_site_it }}" data-language="it" class="language nav_link">it</a>
-              {% elsif site.lang == "fr" %}
-                <a href="{{ url_site_fr }}" data-language="fr" class="language nav_link accent">fr</a>
-                <a href="{{ url_site_en }}" data-language="en" class="language nav_link">en</a>
-                <a href="{{ url_site_de }}" data-language="de" class="language nav_link">de</a>
-                <a href="{{ url_site_it }}" data-language="it" class="language nav_link">it</a>
-              {% elsif site.lang == "it" %}
-                <a href="{{ url_site_fr }}" data-language="fr" class="language nav_link">fr</a>
-                <a href="{{ url_site_en }}" data-language="en" class="language nav_link">en</a>
-                <a href="{{ url_site_de }}" data-language="de" class="language nav_link">de</a>
-                <a href="{{ url_site_it }}" data-language="it" class="language nav_link accent">it</a>
-              {% elsif site.lang == "de" %}
-                <a href="{{ url_site_fr }}" data-language="fr" class="language nav_link">fr</a>
-                <a href="{{ url_site_en }}" data-language="en" class="language nav_link">en</a>
-                <a href="{{ url_site_de }}" data-language="de" class="language nav_link accent">de</a>
-                <a href="{{ url_site_it }}" data-language="it" class="language nav_link">it</a>
+            {% capture current_page %}{{ page.url | split:'.html' | first }}{% endcapture %}
+
+            <div class="nav_lang">
+            {% for lang in site.languages %}
+              {% if site.langShort == lang[1].path %}
+                <a href="/{{ lang[1].path }}{{ current_page }}" lang="{{ lang[1].path }}" class="language accent nav_link">{{ lang[1].path }}</a>
+              {% else %}
+                <a href="/{{ lang[1].path }}{{ current_page }}" lang="{{ lang[1].path }}" class="language nav_link">{{ lang[1].path }}</a>
               {% endif %}
-              </div>
+            {% endfor %}
+            </div>
           </div> 
       </div>
     </div>
