--- a/_layouts/news-archives.html
+++ b/_layouts/news-archives.html
@@ -32,7 +32,7 @@ layout: default
             <div class="new_meta">
               <p class="news_date">
                   <time pubdate datetime="{{news.fragments.publication_date.date | date_to_xmlschema}}" title="{{news.fragments.publication_date.date | date_to_xmlschema | date: '%d.%m'}}">{{news.fragments.publication_date.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
-                  <a href="/{{site.lang}}/news/{{ news.slug }}">{{ site.prismicData.single.page_home.fragments.individual_news_link_to_read_more.text }}</a>
+                  <a href="/{{site.langShort}}/news/{{ news.slug }}">{{ site.prismicData.single.page_home.fragments.individual_news_link_to_read_more.text }}</a>
               </p>
           	</div>
 	        </div>
