--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -213,7 +213,8 @@ input[type=submit]{
 .sites,
 .latestnews_section,
 .news-page,
-.news_section {
+.news_section,
+.social_wall {
     padding-top: 50px;
     padding-bottom: 50px;
 }
