--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -25,7 +25,7 @@
     }
     @media (max-width: 767px) {
 	width: 25%;
-        text-align: left;
+        text-align: left !important;
     }
 }
 
@@ -245,13 +245,13 @@
 @media (max-width:991px) {
     .links_social {
 	padding-top: 0;
-	text-align: left;
+	text-align: left !important;
     }
     .twitter {
 	margin-left: 3px;
     }
     .youtube {
-	margin-left: 7px;
+	margin-left: 6px;
     }
 }
 
