--- a/_sass/pages/_news.scss
+++ b/_sass/pages/_news.scss
@@ -4,6 +4,13 @@
     }
 }
 
+.body {
+    padding-bottom: 10px;
+    color: #858585;
+    font-size: 14px;
+    line-height: 20px;
+}
+
 .new {
     height: 400px;
     position: relative;
