--- a/_sass/pages/_news.scss
+++ b/_sass/pages/_news.scss
@@ -6,7 +6,7 @@
 
 .body {
     padding-bottom: 10px;
-    color: #858585;
+    color: #858585 !important;
     font-size: 14px;
     line-height: 20px;
 }
