--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -107,22 +107,19 @@
 }
 
 .carousel_container {
-    margin-top: 150px;
+    margin-top: 220px;
     margin-left: auto !important;
     margin-right: auto !important;
     width: 100% !important;
     max-width:1880px !important;
     padding: 0 !important;
+    @media (max-width: 1199px) {
+        margin-top: 200px;
+    }
     @media (max-width: 991px) {
-        margin-top: 210px;
+        margin-top: 180px;
     }
     @media (max-width: 767px) {
-        margin-top: 125px;
+        margin-top: 120px;
     }
-}
-.main-text {
-    position: absolute;
-    top: 50px;
-    width: 96.66666666666666%;
-    color: #FFF;
 }
