--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -21,6 +21,14 @@
                         <img src="/images/home/1880x700-2.jpg" alt="Third slide">
                     </div>
                 </div>
+                <a class="carousel-control-prev" href="#carouselPrev" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselNext" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
     </div>
