--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -10,22 +10,22 @@
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 </ol>
-                <div class="carousel-inner">
-                    <div class="item active">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
                         <img src="/images/home/1880x700.jpg" alt="First slide">
                     </div>
-                    <div class="item">
+                    <div class="carousel-item">
                         <img src="/images/home/1880x700-1.jpg" alt="Second slide">
                     </div>
-                    <div class="item">
+                    <div class="carousel-item">
                         <img src="/images/home/1880x700-2.jpg" alt="Third slide">
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselPrev" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselNext" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carousel-example-generic" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
