--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -10,14 +10,14 @@
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
+                <div class="carousel-inner">
+                    <div class="item active">
                         <img src="/images/home/1880x700.jpg" alt="First slide">
                     </div>
-                    <div class="carousel-item">
+                    <div class="item">
                         <img src="/images/home/1880x700-1.jpg" alt="Second slide">
                     </div>
-                    <div class="carousel-item">
+                    <div class="item">
                         <img src="/images/home/1880x700-2.jpg" alt="Third slide">
                     </div>
                 </div>
