--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -12,13 +12,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="/images/home/1880x700.jpg" alt="First slide">
+                        <img src="/images/home/Culture_FR_1880x350.png" alt="First slide">
                     </div>
                     <div class="item">
-                        <img src="/images/home/1880x500-1.jpg" alt="Second slide">
+                        <img src="/images/home/Heritage_FR_1880x350.png" alt="Second slide">
                     </div>
                     <div class="item">
-                        <img src="/images/home/1880x350-2.jpg" alt="Third slide">
+                        <img src="/images/home/SeeYou_FR_1880x350.png" alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
