--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -10,6 +10,8 @@
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 </ol>
+                
+                {% if site.lang == "fr-fr" %} 
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="/images/home/Culture_FR_1880x350.png" alt="First slide">
@@ -21,6 +23,56 @@
                         <img src="/images/home/SeeYou_FR_1880x350.png" alt="Third slide">
                     </div>
                 </div>
+                {% else if site.lang == "de-de" %} 
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="/images/home/Culture_DE_1880x350.png" alt="First slide">
+                    </div>
+                    <div class="item">
+                        <img src="/images/home/Heritage_DE_1880x350.png" alt="Second slide">
+                    </div>
+                    <div class="item">
+                        <img src="/images/home/SeeYou_DE_1880x350.png" alt="Third slide">
+                    </div>
+                </div>
+                {% else if site.lang == "en-gb" %} 
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="/images/home/Culture_EN_1880x350.png" alt="First slide">
+                    </div>
+                    <div class="item">
+                        <img src="/images/home/Heritage_EN_1880x350.png" alt="Second slide">
+                    </div>
+                    <div class="item">
+                        <img src="/images/home/SeeYou_EN_1880x350.png" alt="Third slide">
+                    </div>
+                </div>
+                {% else if site.lang == "it-it" %} 
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="/images/home/Culture_IT_1880x350.png" alt="First slide">
+                    </div>
+                    <div class="item">
+                        <img src="/images/home/Heritage_IT_1880x350.png" alt="Second slide">
+                    </div>
+                    <div class="item">
+                        <img src="/images/home/SeeYou_IT_1880x350.png" alt="Third slide">
+                    </div>
+                </div>
+                {% else if site.lang == "es-es" %} 
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="/images/home/Culture_ES_1880x350.png" alt="First slide">
+                    </div>
+                    <div class="item">
+                        <img src="/images/home/Heritage_ES_1880x350.png" alt="Second slide">
+                    </div>
+                    <div class="item">
+                        <img src="/images/home/SeeYou_ES_1880x350.png" alt="Third slide">
+                    </div>
+                </div>
+                {% endif %}
+                
                 <a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
