--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -6,7 +6,7 @@
 .nav-brand {
     position: relative;
     float: left;
-    @media (min-width: 512px) {
+    @media (max-width: 512px) {
 	min-height: 52px;	    
     }
 }
