--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -7,7 +7,13 @@
     position: relative;
     float: left;
     @media (max-width: 512px) {
-	min-height: 52px;	    
+	min-height: 52px;
+    }
+}
+
+.navbar-header {
+    @media (max-width: 512px) {
+	margin-right: 25px;
     }
 }
 
@@ -52,6 +58,7 @@
 	@media (max-width: 512px) {
 		width: 65%;
 		max-width: 130px;
+		margin-left: 10px;
     	}
 }
 
