--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -23,7 +23,9 @@
                         <img src="/images/home/SeeYou_FR_1880x350.png" alt="Third slide">
                     </div>
                 </div>
-                {% elseif site.lang == "de-de" %} 
+                {% endif %}
+                
+                {% if site.lang == "de-de" %} 
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="/images/home/Culture_DE_1880x350.png" alt="First slide">
@@ -35,7 +37,9 @@
                         <img src="/images/home/SeeYou_DE_1880x350.png" alt="Third slide">
                     </div>
                 </div>
-                {% elseif site.lang == "en-gb" %} 
+                {% endif %}
+                
+                {% if site.lang == "en-gb" %} 
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="/images/home/Culture_EN_1880x350.png" alt="First slide">
@@ -47,7 +51,9 @@
                         <img src="/images/home/SeeYou_EN_1880x350.png" alt="Third slide">
                     </div>
                 </div>
-                {% elseif site.lang == "it-it" %} 
+                {% endif %}
+                
+                {% if site.lang == "it-it" %} 
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="/images/home/Culture_IT_1880x350.png" alt="First slide">
@@ -59,7 +65,9 @@
                         <img src="/images/home/SeeYou_IT_1880x350.png" alt="Third slide">
                     </div>
                 </div>
-                {% elseif site.lang == "es-es" %} 
+                {% endif %}
+                
+                {% if site.lang == "es-es" %} 
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="/images/home/Culture_ES_1880x350.png" alt="First slide">
