--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -2,104 +2,112 @@
 
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
     <div class="container" style="padding-right: 0;">
-      <a class="nav-brand" href="{{nav[0].path}}" style="width:50%;">
-        <img class="logo" src="/images/layout/Lausanne2020-Emblem.png" />
-      </a>
-
-      <div id="ad" style="width:50%">
-        <div id="countdown_container_tag" class="countdown_container">
-          <div class="logo">
-            <img src="/assets/omega_countdown/official-timekeeper-omega-fr.jpg">
-            <!-- <img class="retina" src="/assets/omega_countdown/official-timekeeper-omega.svg"> -->
-          </div>
+        <div class="col-md-2 col-md-offset-1" id="countdown">
+            <div id="countdown_container_tag" class="countdown_container">
+                <div class="logo">
+                    <img src="/assets/omega_countdown/official-timekeeper-omega-fr.jpg">
+                    <!-- <img class="retina" src="/assets/omega_countdown/official-timekeeper-omega.svg"> -->
+                </div>
 			
-          <div id="fr" class="countdown">
-            <img src="/assets/omega_countdown/line.png">
-            <div class="countdown_numbers">
-              <div class="days cd_item"><span class="days_label cd_label"></span><span class="days_remaining cd_remain">00</span></div>
-              <div class="hours cd_item"><span class="hours_label cd_label"></span><span class="hours_remaining cd_remain">00</span></div>
-              <div class="minutes cd_item"><span class="minutes_label cd_label"></span><span class="minutes_remaining cd_remain">00</span></div>
-              <div class="seconds cd_item cd_item_last"><span class="seconds_label cd_label"></span><span class="seconds_remaining cd_remain">00</span></div>
+                <div id="fr" class="countdown">
+                    <img src="/assets/omega_countdown/line.png">
+          	    <div class="countdown_numbers">
+             		<div class="days cd_item"><span class="days_label cd_label"></span><span class="days_remaining cd_remain">00</span></div>
+            		<div class="hours cd_item"><span class="hours_label cd_label"></span><span class="hours_remaining cd_remain">00</span></div>
+            		<div class="minutes cd_item"><span class="minutes_label cd_label"></span><span class="minutes_remaining cd_remain">00</span></div>
+            		<div class="seconds cd_item cd_item_last"><span class="seconds_label cd_label"></span><span class="seconds_remaining cd_remain">00</span></div>
+          	    </div>
+          	    <p></p>
+        	</div>
+
+        	<div class="clock">
+          	    <div class="hours cd_item"><span class="clock_hours clock_digit">00</span></div>
+            	    <div class="inter">:</div>
+            	    <div class="minutes cd_item"><span class="clock_minutes clock_digit">00</span></div>
+            	    <div class="inter">:</div>
+            	    <div class="seconds cd_item cd_item_last"><span class="clock_seconds clock_digit">00</span></div>
+          	</div>
+
+	  	<div id="border" class="border"></div>	
             </div>
-            <p></p>
-          </div>
+            <a class="omega_link" target="_blank" href="https://www.omegawatches.com"></a>
+      	</div>
 
-          <div class="clock">
-            <div class="hours cd_item"><span class="clock_hours clock_digit">00</span></div>
-            <div class="inter">:</div>
-            <div class="minutes cd_item"><span class="clock_minutes clock_digit">00</span></div>
-            <div class="inter">:</div>
-            <div class="seconds cd_item cd_item_last"><span class="clock_seconds clock_digit">00</span></div>
-          </div>
+	    
+        <div class="col-md-4 col-md-offset-1" id="logo" style="width:50%">
+            <a class="nav-brand" href="{{nav[0].path}}" style="width:50%;">
+            	<img class="logo" src="/images/layout/Lausanne2020-Emblem.png" />
+            </a>
+      	</div> 
+	
+	    
+      	<div class="socials slidedown smartphone col-md-3 col-md-offset-1">
+            <div class="links_social">
+          	<a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+            	    <img height="30" src="/images/layout/Instagram-logo.png">
+          	</a>
+          	<a class="socials_links" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+            	    <img height="30" src="/images/layout/facebook-icon.png">
+          	</a>
+          	<a class="socials_links" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+            	    <img height="24" src="/images/layout/twitter-icon.svg">
+          	</a>
+          	<a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+            	    <img height="24" src="/images/layout/YouTube-icon.png">
+          	</a>
+            </div>    
+      	</div>
+      	
+	<div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
+              	<span class="sr-only">Toggle navigation</span><div class="icon-nav"></div><i class="fa fa-bars"></i>
+            </button>
+      	</div>
+      
+	<div class="socials slidedown desktop col-lg-4 col-md-4">
+	    <div class="links_social">
+	    	<a class="socials_links instagram" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+	      	    <img height="30" src="/images/layout/Instagram-logo.png">
+	    	</a>
+	    	<a class="socials_links facebook" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+	      	    <img height="30" src="/images/layout/facebook-icon.png">
+	    	</a>
+	    	<a class="socials_links twitter" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+	      	    <img height="24" src="/images/layout/twitter-icon.svg">
+	    	</a>
+	    	<a class="socials_links youtube" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+	      	    <img height="24" src="/images/layout/YouTube-icon.png">
+	    	</a>
+	    </div>    
+      	</div>
+      	    
+	<div class="navbar-collapse collapse col-lg-8 col-md-8" id="main-navbar">
+            <div class="nav navbar-nav navbar-right" style="float: right; margin-right: 0;">
+            	{% for link in nav %}
 
-	        <div id="border" class="border"></div>	
-        </div>
-        <a class="omega_link" target="_blank" href="https://www.omegawatches.com"></a>
-      </div>  
-      <div class="socials slidedown smartphone col-lg-4 col-md-4">
-        <div class="links_social">
-          <a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
-            <img height="30" src="/images/layout/Instagram-logo.png">
-          </a>
-          <a class="socials_links" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
-            <img height="30" src="/images/layout/facebook-icon.png">
-          </a>
-          <a class="socials_links" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-            <img height="24" src="/images/layout/twitter-icon.svg">
-          </a>
-          <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-            <img height="24" src="/images/layout/YouTube-icon.png">
-          </a>
-        </div>    
-      </div>
-      <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
-              <span class="sr-only">Toggle navigation</span><div class="icon-nav"></div><i class="fa fa-bars"></i>
-          </button>
-      </div>
-      <div class="socials slidedown desktop col-lg-4 col-md-4">
-	  <div class="links_social">
-	    <a class="socials_links instagram" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
-	      <img height="30" src="/images/layout/Instagram-logo.png">
-	    </a>
-	    <a class="socials_links facebook" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
-	      <img height="30" src="/images/layout/facebook-icon.png">
-	    </a>
-	    <a class="socials_links twitter" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-	      <img height="24" src="/images/layout/twitter-icon.svg">
-	    </a>
-	    <a class="socials_links youtube" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-	      <img height="24" src="/images/layout/YouTube-icon.png">
-	    </a>
-	  </div>    
-      </div>
-      <div class="navbar-collapse collapse col-lg-8 col-md-8" id="main-navbar">
-          <div class="nav navbar-nav navbar-right" style="float: right; margin-right: 0;">
-            {% for link in nav %}
+              	    {% capture current_base_page %}{{ site.baseurl }}{{ page.url | split:'.html' | first }}{% endcapture %}
+              	    {% capture folder_path %}{{ link.path }}/{% endcapture %}
 
-              {% capture current_base_page %}{{ site.baseurl }}{{ page.url | split:'.html' | first }}{% endcapture %}
-              {% capture folder_path %}{{ link.path }}/{% endcapture %}
+              	    {% if current_base_page == link.path or current_base_page == folder_path %}
+                    	<a class="nav_link w--current" href="{{link.path}}">{{link.title}}</a>
+              	    {% else %}
+                    	<a class="nav_link" href="{{link.path}}">{{link.title}}</a>
+              	    {% endif %}
 
-              {% if current_base_page == link.path or current_base_page == folder_path %}
-                <a class="nav_link w--current" href="{{link.path}}">{{link.title}}</a>
-              {% else %}
-                <a class="nav_link" href="{{link.path}}">{{link.title}}</a>
-              {% endif %}
+            	{% endfor %}
 
-            {% endfor %}
+                {% capture current_page %}{{ page.url | split:'.html' | first }}{% endcapture %}
 
-            {% capture current_page %}{{ page.url | split:'.html' | first }}{% endcapture %}
-
-            <div class="nav_lang">
-            {% for lang in site.languages %}
-              {% if site.langShort == lang[1].path %}
-                <a href="/{{ lang[1].path }}" lang="{{ lang[1].path }}" class="language accent nav_link">{{ lang[1].path }}</a>
-              {% else %}
-                <a href="/{{ lang[1].path }}" lang="{{ lang[1].path }}" class="language nav_link">{{ lang[1].path }}</a>
-              {% endif %}
-            {% endfor %}
-            </div>
-          </div> 
-      </div>
+            	<div class="nav_lang">
+            	    {% for lang in site.languages %}
+              		{% if site.langShort == lang[1].path %}
+                	    <a href="/{{ lang[1].path }}" lang="{{ lang[1].path }}" class="language accent nav_link">{{ lang[1].path }}</a>
+              		{% else %}
+                	    <a href="/{{ lang[1].path }}" lang="{{ lang[1].path }}" class="language nav_link">{{ lang[1].path }}</a>
+              		{% endif %}
+            	    {% endfor %}
+		</div>
+	    </div> 
+     	</div>
     </div>
-  </nav>
+</nav>
