--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -2,7 +2,7 @@
 
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
     <div class="container" style="padding-right: 0;">
-        <div class="col-md-2 col-md-offset-1" id="countdown">
+        <div class="col-md-3" id="countdown">
             <div id="countdown_container_tag" class="countdown_container">
                 <div class="logo">
                     <img src="/assets/omega_countdown/official-timekeeper-omega-fr.jpg">
@@ -34,7 +34,7 @@
       	</div>
 
 	    
-        <div class="col-md-4 col-md-offset-1" id="logo" style="width:50%">
+        <div class="col-md-4" id="logo" style="width:50%">
             <a class="nav-brand" href="{{nav[0].path}}" style="width:50%;">
             	<img class="logo" src="/images/layout/Lausanne2020-Emblem.png" />
             </a>
@@ -58,13 +58,7 @@
             </div>    
       	</div>
       	
-	<div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
-              	<span class="sr-only">Toggle navigation</span><div class="icon-nav"></div><i class="fa fa-bars"></i>
-            </button>
-      	</div>
-      
-	<div class="socials slidedown desktop col-lg-4 col-md-4">
+	<div class="socials slidedown desktop col-lmd-3">
 	    <div class="links_social">
 	    	<a class="socials_links instagram" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
 	      	    <img height="30" src="/images/layout/Instagram-logo.png">
@@ -79,6 +73,12 @@
 	      	    <img height="24" src="/images/layout/YouTube-icon.png">
 	    	</a>
 	    </div>    
+      	</div>    
+	    
+	<div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
+              	<span class="sr-only">Toggle navigation</span><div class="icon-nav"></div><i class="fa fa-bars"></i>
+            </button>
       	</div>
       	    
 	<div class="navbar-collapse collapse col-lg-8 col-md-8" id="main-navbar">
