--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -34,8 +34,8 @@
       	</div>
 
 	    
-        <div class="col-md-4" id="logo" style="width:50%">
-            <a class="nav-brand" href="{{nav[0].path}}" style="width:50%;">
+        <div class="col-md-4 col-md-offset-1" id="logo">
+            <a class="nav-brand" href="{{nav[0].path}}">
             	<img class="logo" src="/images/layout/Lausanne2020-Emblem.png" />
             </a>
       	</div> 
@@ -58,7 +58,7 @@
             </div>    
       	</div>
       	
-	<div class="socials slidedown desktop col-lmd-3">
+	<div class="socials slidedown desktop col-md-3 col-md-offset-1">
 	    <div class="links_social">
 	    	<a class="socials_links instagram" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
 	      	    <img height="30" src="/images/layout/Instagram-logo.png">
