--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -55,7 +55,7 @@
           	<a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
             	    <img height="24" src="/images/layout/YouTube-icon.png">
           	</a>
-            </div>    
+            </div>
       	</div>
       	
 	<div class="socials slidedown desktop col-md-3 col-md-offset-1">
@@ -72,7 +72,19 @@
 	    	<a class="socials_links youtube" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
 	      	    <img height="24" src="/images/layout/YouTube-icon.png">
 	    	</a>
-	    </div>    
+	    </div>
+	    <div class="dropdown">
+    		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+		    Dropdown Example <span class="caret"></span>
+		</button>
+    		<ul class="dropdown-menu">
+      		    <li><a href="#">FR</a></li>
+      		    <li><a href="#">DE</a></li>
+      		    <li><a href="#">EN</a></li>
+      		    <li><a href="#">IT</a></li>
+      		    <li><a href="#">ES</a></li>
+    		</ul>
+  	    </div>    
       	</div>    
 	    
 	<div class="navbar-header">
