--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -81,7 +81,7 @@
             </button>
       	</div>
       	    
-	<div class="navbar-collapse collapse col-lg-8 col-md-8" id="main-navbar">
+	<div class="navbar-collapse collapse col-md-12" id="main-navbar">
             <div class="nav navbar-nav navbar-right" style="float: right; margin-right: 0;">
             	{% for link in nav %}
 
